# banabot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CREDITS.md  Dockerfile  LICENSE  README.md  REBRAND_PLAN.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  pyproject.toml  pyproject.toml.backup
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
banabot/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
banabot/agent/tools/: cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
banabot/bus/: __init__.py  queue.py
banabot/channels/: base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
banabot/cli/: __init__.py  commands.py  config_wizard.py
banabot/cli/i18n/: __init__.py  en.json  es.json
banabot/config/: __init__.py  loader.py  schema.py
banabot/cron/: service.py
banabot/heartbeat/: __init__.py
banabot/providers/: __init__.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py
banabot/session/: __init__.py  manager.py
banabot/skills/clawhub/: SKILL.md
banabot/utils/: __init__.py  helpers.py
banobot/: __init__.py  __main__.py
banobot/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
banobot/agent/tools/: __init__.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
banobot/bus/: __init__.py  queue.py
banobot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
banobot/cli/: __init__.py  commands.py  config_wizard.py
banobot/cli/i18n/: __init__.py  en.json
banobot/config/: __init__.py  loader.py  schema.py
banobot/cron/: __init__.py  service.py
banobot/heartbeat/: __init__.py
banobot/providers/: __init__.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py
banobot/session/: __init__.py  manager.py
banobot/skills/clawhub/: SKILL.md
banobot/utils/: __init__.py  helpers.py
bridge/: package.json
changelog/: 0.0.1.md  0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md
docs/: DEVELOPMENT.md
docs/plans/one/: ONBOARDING_CONVERSATIONAL.md  REBRAND_PLAN.md
docs/plans/three/: ANALISIS_SKILLS_COMPARISON.md  DYNAMIC_PROMPT_BUILDING.md  SUBAGENTS_ANALYSIS.md
docs/plans/two/: MEMORY_FEATURES_VIABILITY.md  MEMORY_SEMANTIC_CONTEXT.md  SEMANTIC_MEMORY_PLAN.md
evals/one/evidence/: EVALUACION_PRIMERA_CONVERSACION.md  evaluacion_banabot_v1.md  (+1 more)
nanobot/agent/: loop.py  subagent.py
nanobot/cli/: commands.py  config_wizard.py
nanobot/config/: schema.py
roadmap/: index.md
src/banabot/: __init__.py  __main__.py
tests/: test_cli_input.py  test_commands.py  test_config_wizard.py  test_consolidate_offset.py  test_docker.sh  test_email_channel.py  test_memory_compaction.py  test_onboarding.py  test_semantic_memory.py  test_session_memory_hook.py  test_timezone_telegram.py  test_tool_validation.py  test_weather.py  test_web_search.py
tests/v2/: test_skill_loader.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
workspace/memory/: MEMORY.md
(+77 files in other folders)
