[project]
name = "banabot-ai"
version = "0.4.0"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "banabot contributors"}
]
keywords = ["ai", "agent", "chatbot", "banabot", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.20.0,<1.0.0",
    "litellm>=1.81.5,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "python-telegram-bot[socks]>=22.0,<23.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "socksio>=1.0.0,<2.0.0",
    "python-socketio>=5.16.0,<6.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "qq-botpy>=1.2.0,<2.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "InquirerPy>=0.3.4,<1.0.0",
    "ddgs>=9.0.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.5.1",
]

[project.urls]
Homepage = "https://github.com/Mrbanano/banabot"
Repository = "https://github.com/Mrbanano/banabot"
Issues = "https://github.com/Mrbanano/banabot/issues"
Chat = "https://t.me/bananobot_chat"
Logo = "https://raw.githubusercontent.com/Mrbanano/banabot/main/img/banabot-logo.png"

[project.scripts]
banabot = "banabot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/banabot"]

[tool.hatch.build]
include = [
    "src/banabot/**/*.py",
    "src/banabot/skills/**/*.md",
    "src/banabot/skills/**/*.sh",
    "src/banabot/cli/i18n/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/banabot/",
    "bridge/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "banabot/bridge"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["src/banabot"]
exclude = [
    "tests",
    "src/banabot/channels",        # third-party channel SDKs without stubs
    "src/banabot/cli/config_wizard.py",  # InquirerPy has no stubs
    "src/banabot/providers",       # litellm/httpx complex generics
]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
